--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,129 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+body {
+  background-color: rgb(224, 192, 253);
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(179, 116, 238);
+  padding: 10px;
+  text-align: center;
+  margin-bottom: 24px;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+
+  & input {
+    width: 280px;
+    display: block;
+    border: none;
+    padding: 4px 10px 5px 10px;
+    outline: none;
+    &:hover,
+    &:focus {
+      border: 1px solid rgb(255, 163, 235);
+      box-shadow: 0 1px 3px rgb(0 0 0 / 20%), 0 1px 1px rgb(0 0 0 / 14%),
+        0 2px 1px -1px rgb(0 0 0 / 12%);
+    }
+  }
+
+  & button {
+    display: block;
+    border: none;
+    background-color: rgb(255, 255, 255);
+    padding: 4px 10px;
+    background-color: #de95ff;
+
+    &:hover,
+    &:focus {
+      border: 1px solid rgb(255, 163, 235);
+      background-color: #efb0ff;
+      box-shadow: 0 1px 3px rgb(0 0 0 / 20%), 0 1px 1px rgb(0 0 0 / 14%),
+        0 2px 1px -1px rgb(0 0 0 / 12%);
+    }
+  }
+
+  & img {
+    width: 15px;
+    height: 15px;
+    object-fit: cover;
+  }
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  grid-auto-rows: 240px;
+  grid-gap: 24px;
+  padding: 0px 12px;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 24px;
+}
+
+.photo-card {
+  background-color: rgb(255, 255, 255);
+  text-decoration: none;
+  color: rgb(179, 88, 240);
+  box-shadow: 0 1px 4px rgba(199, 57, 255, 0.12),
+    0 1px 1px rgba(255, 48, 227, 0.12), 0 2px 1px -1px rgba(196, 70, 255, 0.12);
+  transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  & img {
+    height: 190px;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.02);
+  }
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-item {
+  text-align: center;
+  font-size: 14px;
+  margin: 6px 0 0 0;
+
+  & b {
+    display: block;
+    margin-bottom: 2px;
+  }
+}
+
+.load-more {
+  background-color: rgb(209, 111, 255);
+  border: 2px solid rgb(189, 76, 255);
+  border-radius: 15px;
+  padding: 4px 20px 5px 20px;
+  outline: none;
+  line-height: 23px;
+  color: rgb(255, 255, 255);
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  margin-bottom: 24px;
+
+  &:hover,
+  &:focus {
+    background-color: #bb51ec;
+    border: 4px solid rgb(176, 40, 255);
+    box-shadow: 0 1px 3px rgb(0 0 0 / 20%), 0 1px 1px rgb(0 0 0 / 14%),
+      0 2px 1px -1px rgb(0 0 0 / 12%);
+  }
+}
+
+.is-hidden {
+  display: none;
+}
